--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>provided</scope>
+       <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+        ... 
+    </configuration>
     </dependency>
   </dependencies>
 
